scripts/nullaway/annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8.txt
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/ip/IPLayer.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return ifacesByName.get(name);
    	^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/common/Node.java:60: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return ifacesByName.get(name);
    	^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/common/Node.java:72: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return network;
    	^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/ip/IPRouteEntry.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.oif = null;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/ip/IPRouteEntry.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.oif = oif;
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/common/Network.java:45: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return nodes.get(name);
		^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/ethernet/EthernetInterface.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
    	this.addr= addr;
    	         ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/common/AbstractHardwareInterface.java:37: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return link;
    	^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/common/AbstractInterface.java:97: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    	return attrs.get(attr);
    	^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/utilities/NetworkBuilder.java:110: error: [NullAway] dereferenced expression router is @Nullable
		IPInterfaceAdapter lo= new IPLoopbackAdapter(router.getIPLayer(), 0);
		                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/utilities/NetworkBuilder.java:147: error: [NullAway] dereferenced expression link is @Nullable
		HardwareInterface<? extends Message> if1= link.getHead();
		                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/utilities/NetworkBuilder.java:210: error: [NullAway] passing @Nullable parameter 'router' where @NonNull is required
						loadTopologyRouterEthernet(tokens, router);
						                                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/linkStateRouting/HelloTimer.java:31: error: [NullAway] dereferenced expression protocol is @Nullable
        protocol.SendHelloToAllInterfaces();
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/linkStateRouting/LSPTimer.java:31: error: [NullAway] dereferenced expression protocol is @Nullable
        protocol.SendLSPToAllInterfaces();
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/dijkstra/FibonacciHeap.java:95: error: [NullAway] initializer method does not guarantee @NonNull field minNode (line 85) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FibonacciHeap() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/dijkstra/FibonacciHeap.java:116: error: [NullAway] assigning @Nullable expression to @NonNull field
        minNode = null;
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/dijkstra/FibonacciHeap.java:240: error: [NullAway] dereferenced expression x is @Nullable
                tempRight = x.right;
                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/dijkstra/FibonacciHeap.java:263: error: [NullAway] assigning @Nullable expression to @NonNull field
                minNode = null;
                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/dijkstra/FibonacciHeap.java:476: error: [NullAway] assigning @Nullable expression to @NonNull field
        minNode = null;
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/dijkstra/Dijkstra.java:28: error: [NullAway] initializer method does not guarantee @NonNull fields predecessors (line 24), distances (line 26) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Dijkstra(Graph graph) {
           ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urlfb310a588a_alokhan_LinkStateNetworkSimulation_tgz-pJ8-reso_examples_static_routing_DemoJ8/src/reso/examples/static_routing/AppSniffer.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
